--- a/capstone_v2/templates/base.html
+++ b/capstone_v2/templates/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Inter:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Inter:wght@500&family=Abril+Fatface&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/main.css">
 </head>
     <body>
