--- a/capstone_v2/templates/home.html
+++ b/capstone_v2/templates/home.html
@@ -31,7 +31,7 @@
                 <img :src="[[ post.previewImage ]]" alt="preview image for a blog post">
                 <div class="preview-text-container">
                     <h3>[[ post.title ]]</h3>
-                    <p><em>Created: [[ post.created ]]</em></p>
+                    <p class="created"><em>Created: [[ post.created ]]</em></p>
                     <p class="preview-text">[[ post.previewText ]]...</p>
                 </div>
             </a>
